--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <gwt.version>2.3.0</gwt.version>
     <gwt.plugin.version>2.2.0</gwt.plugin.version>
     <spring.version>3.1.1.RELEASE</spring.version>
+    <junit.version>4.4</junit.version>
   </properties>
 
   <build>
@@ -191,6 +192,12 @@
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-web</artifactId>
 		<version>${spring.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-test</artifactId>
+		<version>${spring.version}</version>
+		<scope>test</scope>
 	</dependency>
   </dependencies>
 
