--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,8 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Kai/Downloads/colt/lib/concurrent.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kai/Downloads/colt/lib/colt.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
