--- a/.settings/com.vaadin.integration.eclipse.prefs
+++ b/.settings/com.vaadin.integration.eclipse.prefs
@@ -1,10 +1,8 @@
+=\=\=\=\=\=\=
+<<<<<<<=Updated upstream
+>>>>>>>=Stashed changes
 com.vaadin.integration.eclipse.useLatestNightly=false
-<<<<<<< Updated upstream
 com.vaadin.integration.eclipse.widgetsetBuildsSuspended=true
-com.vaadin.integration.eclipse.widgetsetCompilationEta=161410
-com.vaadin.integration.eclipse.widgetsetDirty=true
-=======
 com.vaadin.integration.eclipse.widgetsetCompilationEta=56502
-com.vaadin.integration.eclipse.widgetsetDirty=false
->>>>>>> Stashed changes
+com.vaadin.integration.eclipse.widgetsetDirty=true
 eclipse.preferences.version=1
