--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+   			<groupId>org.hibernate</groupId>
+   			<artifactId>hibernate-validator</artifactId>
+   			<version>4.3.1.Final</version>
+		</dependency>
 		<!-- Diese Dependency war momentan noch nicht als Maven-Dependency verfuegbar. 
 			Daher wurden die 2 jar-Files manuell hinzugefuegt. Sobald dieses Addon ins 
 			Vaadin-Maven-Repo gewandert ist, sollten die jar-Files geloescht werden und 
