--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,11 @@
 			<version>4.11</version>
 		</dependency>
 
+		<dependency>
+			<groupId>colt</groupId>
+			<artifactId>colt</artifactId>
+			<version>1.2.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
