--- a/pom.xml
+++ b/pom.xml
@@ -285,6 +285,11 @@
 				
 
 
+		<dependency>
+			<groupId>colt</groupId>
+			<artifactId>colt</artifactId>
+			<version>1.2.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
