--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   BusinessHorizon2
   
       Copyright (C) 2012-2013  Christian Gahlert, Florian Stier, Kai Westerholz,
-      Timo Belz, Daniel Dengler, Katharina Huber, Christian Scherer, Julius Hacker
+      Timo Belz, Daniel Dengler, Katharina Huber, Christian Scherer, Julius Hacker, Dennis Neufeld
   
       This program is free software: you can redistribute it and/or modify
       it under the terms of the GNU Affero General Public License as published by
@@ -24,24 +24,114 @@
 	<groupId>dhbw.ka.mwi</groupId>
 	<artifactId>businesshorizon2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Vaadin Web Application</name>
+	<name>Business Horizon 2</name>
 	<packaging>war</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<vaadin.version>6.8.2</vaadin.version>
+		<vaadin.version>6.8.13</vaadin.version>
 		<gwt.version>2.3.0</gwt.version>
 		<gwt.plugin.version>2.2.0</gwt.plugin.version>
-		<spring.version>3.1.1.RELEASE</spring.version>
-		<junit.version>4.4</junit.version>
+		<spring.version>3.0.7.RELEASE</spring.version>
 	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.vaadin.addon</groupId>
+			<artifactId>confirmdialog</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin</artifactId>
+			<version>${vaadin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- Diese Dependency war momentan noch nicht als Maven-Dependency verfuegbar. 
+			Daher wurden die 2 jar-Files manuell hinzugefuegt. Sobald dieses Addon ins 
+			Vaadin-Maven-Repo gewandert ist, sollten die jar-Files geloescht werden und 
+			dieser Code ausdokumentiert werden. https://vaadin.com/directory#addon/mvp-lite 
+			<dependency> <groupId>com.mvplite</groupId> <artifactId>mvp-lite</artifactId> 
+			<version>1.0</version> </dependency> -->
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+			<type>jar</type>
+			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.sun.jmx</groupId>
+					<artifactId>jmxri</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.jdmk</groupId>
+					<artifactId>jmxtools</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>javax.jms</groupId>
+					<artifactId>jms</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
+
+		<dependency>
+		   <groupId>org.vaadin.addons</groupId>
+		   <artifactId>visualizationsforvaadin</artifactId>
+		   <version>1.1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>colt</groupId>
+			<artifactId>colt</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.0.2</version>
+				<version>2.4</version>
 				<configuration>
 					<webResources>
 						<resource>
@@ -73,7 +163,7 @@
 			<plugin>
 				<groupId>com.googlecode.addjars-maven-plugin</groupId>
 				<artifactId>addjars-maven-plugin</artifactId>
-				<version>1.0.2</version>
+				<version>1.0.5</version>
 				<executions>
 					<execution>
 						<goals>
@@ -159,27 +249,21 @@
 			<!-- A simple Jetty test server at http://localhost:8080/businesshorizon2 
 				can be launched with the Maven goal jetty:run and stopped with jetty:stop -->
 			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.24</version>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
 				<configuration>
-					<stopPort>9966</stopPort>
-					<stopKey>businesshorizon2</stopKey>
 					<!-- Redeploy every x seconds if changes are detected, 0 for no automatic 
 						redeployment -->
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 					<!-- make sure Jetty also finds the widgetset -->
 					<webAppConfig>
 						<contextPath>/</contextPath>
-						<baseResource implementation="org.mortbay.resource.ResourceCollection">
-							<!-- Workaround for Maven/Jetty issue http://jira.codehaus.org/browse/JETTY-680 -->
-							<!-- <resources>src/main/webapp,${project.build.directory}/${project.build.finalName}</resources> -->
-							<resourcesAsCSV>WebContent</resourcesAsCSV>
-						</baseResource>
 					</webAppConfig>
 				</configuration>
 			</plugin>
 		</plugins>
+		
+
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
@@ -250,102 +334,4 @@
 		<pluginRepository> <id>vaadin-snapshots</id> <url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</url> 
 		<snapshots> <enabled>true</enabled> </snapshots> <releases> <enabled>false</enabled> 
 		</releases> </pluginRepository> </pluginRepositories> -->
-
-	<dependencies>
-		<dependency>
-			<groupId>org.vaadin.addon</groupId>
-			<artifactId>confirmdialog</artifactId>
-			<version>1.2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.vaadin</groupId>
-			<artifactId>vaadin</artifactId>
-			<version>${vaadin.version}</version>
-		</dependency>
-		<!-- <dependency> <groupId>com.google.gwt</groupId> <artifactId>gwt-user</artifactId> 
-			<version>${gwt.version}</version> <scope>provided</scope> </dependency> <dependency> 
-			<groupId>javax.validation</groupId> <artifactId>validation-api</artifactId> 
-			<version>1.0.0.GA</version> <scope>provided</scope> </dependency> <dependency> 
-			<groupId>javax.validation</groupId> <artifactId>validation-api</artifactId> 
-			<version>1.0.0.GA</version> <classifier>sources</classifier> <scope>provided</scope> 
-			</dependency> -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<!-- Diese Dependency war momentan noch nicht als Maven-Dependency verfuegbar. 
-			Daher wurden die 2 jar-Files manuell hinzugefuegt. Sobald dieses Addon ins 
-			Vaadin-Maven-Repo gewandert ist, sollten die jar-Files geloescht werden und 
-			dieser Code ausdokumentiert werden. https://vaadin.com/directory#addon/mvp-lite 
-			<dependency> <groupId>com.mvplite</groupId> <artifactId>mvp-lite</artifactId> 
-			<version>1.0</version> </dependency> -->
-
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
-			<type>jar</type>
-			<scope>compile</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>com.sun.jmx</groupId>
-					<artifactId>jmxri</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.sun.jdmk</groupId>
-					<artifactId>jmxtools</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>javax.jms</groupId>
-					<artifactId>jms</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1-b04</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-		</dependency>
-
-		<dependency>
-		   <groupId>org.vaadin.addons</groupId>
-		   <artifactId>visualizationsforvaadin</artifactId>
-		   <version>1.1.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>colt</groupId>
-			<artifactId>colt</artifactId>
-			<version>1.2.0</version>
-		</dependency>
-	</dependencies>
-
 </project>
