Beginn der Implementierung der Passwort Zurücksetzen Methode. #226 Beginn der Implementierung der Klassen zum Senden von E-Mails.

--- a/.classpath
+++ b/.classpath
@@ -31,5 +31,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Tobi/Dropbox/MWI-Projekt 2014 - WOUF/IT/javamail1_4_7.zip"/>
+	<classpathentry kind="lib" path="C:/Users/Tobi/Dropbox/MWI-Projekt 2014 - WOUF/IT/javamail1_4_7/javamail-1.4.7/mail.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
