--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+            <type>jar</type>
+        </dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
