Lineare Regression eingebaut schlägt noch fehl da fehler in Folgeberechnungen

--- a/.classpath
+++ b/.classpath
@@ -31,5 +31,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/felix/Downloads/jfreechart-1.0.17.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
