--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <!-- BusinessHorizon2 Copyright (C) 2012-2013 Christian Gahlert, Florian 
 	Stier, Kai Westerholz, Timo Belz, Daniel Dengler, Katharina Huber, Christian 
 	Scherer, Julius Hacker; 2013-2014 Marcel Rosenberger, Mirko Göpfrich, Annika 
-	Weis, Katharina Narlock, Volker Maier This program is free software: you 
+	Weis, Katharina Narlock, Volker Maier 2014-2015 Marco Glaser, Tobias Lindner, Felix Schlosser, Tobias Blasy This program is free software: you 
 	can redistribute it and/or modify it under the terms of the GNU Affero General 
 	Public License as published by the Free Software Foundation, either version 
 	3 of the License, or (at your option) any later version. This program is 
